[package]
name = "landns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = {version = "1", features = ["full"]}
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.86"
bytes = "1.7.1"
hmac = "0.12"
sha2 = "0.10.8"